Initial implementation of User API
