# agile-monkeys-shop-infrastructure/src/main/java/com/brais/agilemonkeysshop/user/entity/User.java
@@ -1,0 +1,37 @@
+package com.brais.agilemonkeysshop.user.entity;
+
+import org.springframework.data.mongodb.core.mapping.Document;
+
+import com.brais.agilemonkeysshop.user.UserStatusEnum;
+import com.brais.agilemonkeysshop.user.UserTypeEnum;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.bson.codecs.pojo.annotations.BsonId;
+
+@Document("user")
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder(toBuilder = true)
+public class User {
+
+  @BsonId
+  private String id;
+
+  private String username;
+
+  private String password;
+
+  private String name;
+
+  private String surname;
+
+  private Integer age;
+
+  private String userType;
+
+  private String userStatus;
+
+}
